syntax = "proto3";

package posts.v1;

service PostsService {
  rpc GetPostList (PostListRequest) returns (PostListResponse) {}
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost (UpdatePostRequest) returns (SuccessResponse) {}
  rpc DeletePost (DeletePostRequest) returns (SuccessResponse) {}
  rpc GetPost (GetPostRequest) returns (GetPostResponse) {}
}

message Post {
  string id = 1;
  string title = 2;
  string body = 3;
  bool published = 4;
}

message PostListRequest {
  bool published = 1;
}

message PostListResponse {
  repeated Post posts = 1;
}

message CreatePostRequest {
  string title = 1;
  string body = 2;
}

message CreatePostResponse {
  string id = 1;
}

message UpdatePostRequest {
  Post post = 1;
}


message DeletePostRequest {
  string id = 1;
}

message SuccessResponse {
  bool success = 1;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}